--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@remix-run/node": "^1.19.2",
     "@remix-run/react": "^1.19.2",
     "@remix-run/vercel": "^1.19.2",
+    "@supabase/supabase-js": "^2.32.0",
     "@vercel/node": "^2.10.3",
     "isbot": "^3.6.8",
     "react": "^18.2.0",
